# cconsole

./: .clang-format  CMakeLists.txt  LICENSE  Makefile
examples/: CMakeLists.txt  example1.cpp
include/cconsole/: cconsole.h
src/: CMakeLists.txt  cconsole.cpp
